force-app/main/default/objects/CustomFilter__c/CustomFilter__c.object-meta.xml
<CustomObject>
    <label>Custom Filter</label>
    <nameField>
        <label>Custom Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>