force-app/main/default/objects/CustomFilter__c/fields/DisplayedColumns__c.field-meta.xml
<CustomField>
    <fullName>DisplayedColumns__c</fullName>
    <label>Displayed Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>