force-app/main/default/objects/CustomFilter__c/fields/FilteringFields__c.field-meta.xml
<CustomField>
    <fullName>FilteringFields__c</fullName>
    <label>Filtering Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>