force-app/main/default/objects/CustomFilter__c/fields/Font__c.field-meta.xml
<CustomField>
    <fullName>Font__c</fullName>
    <label>Font</label>
    <length>50</length>
    <type>Text</type>
</CustomField>