force-app/main/default/objects/CustomFilter__c/fields/InitialFilterCondition__c.field-meta.xml
<CustomField>
    <fullName>InitialFilterCondition__c</fullName>
    <label>Initial Filter Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>