force-app/main/default/objects/CustomFilter__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>